--- a/src/modules/users/views/forgot_password.hbs
+++ b/src/modules/users/views/forgot_password.hbs
@@ -1,6 +1,7 @@
 <style>
   .message-content {
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
     max-width: 600px;
     font-size: 18px;
     line-height: 21px;
